# test_e2e_phase_9

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: create-infra.yml  deploy.yml  destroy.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/core/: urls.py  views.py
backend/apps/files/: urls.py  views.py
backend/config/: __init__.py  celery.py  settings.py  urls.py
terraform/: README.md  backend.tf  ec2.tf  ec2_iam.tf  ec2_security.tf  main.tf  outputs.tf  s3.tf  user-data.sh  variables.tf  vpc.tf
